chore: finalize copy on about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,7 +19,7 @@
 
       On the front-end, I emphasize accessibility, design-to-code accuracy, re-usable atomic structure, SEO, and performance optimization best practices.<br /><br />
 
-      Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, PostGres with headless CMS, SSG, and CD/CI pipelines. Inevitably, I graduated to a modern Typescript, server vs. client ecosystem that utilizes TSX and graphQL. I'm a heavy Node.js user but enjoy Django + Python backends.<br /><br />
+      Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, CD/CI pipelines, then made the switch to headless CMS with PostGres, Node.js and SSG. Inevitably, I graduated to a modern Typescript, server vs. client ecosystem that utilizes stateful TSX and graphQL fetching. Always tooling, I've been expanding my knowledge to the Django + Python back-end arena.<br /><br />
 
       I've been a stalwart team member in a collaborative environment with distributed teams. I have lead-developer experience, pay attention to detail, and have a strong desire to learn. I focus on team goals, remain unpretentious, and prioritize clear communication.<br /><br />
 
