--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,19 +12,19 @@
         <span class="translate-y-0.5 ml-2 flex items-center text-h4" tabindex="0">Olympia, WA, USA</span>
       </div>
     </div>
-    <p class="substep animation__delay-long -md:mb-3 mb-5" tabindex="0">
-      I'm a full-stack professional with over 6 years of experience.<br /><br />
+    <div class="substep animation__delay-long -md:mb-3 mb-5 flex flex-col -md:space-y-5 space-y-7">
+      <p tabindex="0">I'm a full-stack professional with over 6 years of experience.</p>
 
-      In that time, I've enjoyed building, maintaining, and repairing many websites, plugins, and integrations. Having used a myriad of technologies, I've become somewhat framework-agnostic and proficient in choosing a stack that best suits project needs.<br /><br />
+      <p tabindex="0">In that time, I've enjoyed building, maintaining, and repairing many websites, plugins, and integrations. Having used a myriad of technologies, I've become somewhat framework-agnostic and proficient in choosing a stack that best suits project needs.</p>
 
-      On the front-end, I emphasize accessibility, design-to-code accuracy, re-usable atomic structure, SEO, and performance optimization best practices.<br /><br />
+      <p tabindex="0">On the front-end, I emphasize accessibility, design-to-code accuracy, re-usable atomic structure, SEO, and performance optimization best practices.</p>
 
-      Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, CD/CI pipelines, then made the switch to headless CMS with PostGres, Node.js and SSG. Inevitably, I graduated to a modern Typescript, server vs. client ecosystem that utilizes stateful TSX and graphQL fetching. Always tooling, I've been expanding my knowledge to the Django + Python back-end arena.<br /><br />
+      <p tabindex="0">Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, CD/CI pipelines, then made the switch to headless CMS with PostGres, Node.js and SSG. Inevitably, I graduated to a modern Typescript, server vs. client ecosystem that utilizes stateful TSX and graphQL fetching. Always tooling, I've been expanding my knowledge to the Django + Python back-end arena.</p>
 
-      I've been a stalwart team member in a collaborative environment with distributed teams. I have lead-developer experience, pay attention to detail, and have a strong desire to learn. I focus on team goals, remain unpretentious, and prioritize clear communication.<br /><br />
+      <p tabindex="0">I've been a stalwart team member in a collaborative environment with distributed teams. I have lead-developer experience, pay attention to detail, and have a strong desire to learn. I focus on team goals, remain unpretentious, and prioritize clear communication.</p>
 
-      Let's work together!
-    </p>
+      <span tabindex="0">Let's work together!</span>
+    </div>
   </header>
 
   <div class="flex justify-center items-center mb-5">
