--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -554,7 +554,7 @@ video {
   display: none;
 }
 
-body {
+body, p {
   font-size: clamp(1rem, 1.5625vw, 1.25rem);
 }
 
@@ -600,10 +600,6 @@ h4, .h4 {
 
 .pointer-events-none {
   pointer-events: none;
-}
-
-.visible {
-  visibility: visible;
 }
 
 .absolute {
@@ -658,20 +654,12 @@ h4, .h4 {
   top: -68px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .bottom-20 {
   bottom: 5rem;
 }
 
 .bottom-\[20\%\] {
   bottom: 20%;
-}
-
-.left-0 {
-  left: 0px;
 }
 
 .left-\[100px\] {
@@ -688,10 +676,6 @@ h4, .h4 {
 
 .left-\[960px\] {
   left: 960px;
-}
-
-.right-0 {
-  right: 0px;
 }
 
 .right-20 {
@@ -983,6 +967,12 @@ h4, .h4 {
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
+.space-y-7 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+}
+
 .self-start {
   align-self: flex-start;
 }
@@ -1006,14 +996,6 @@ h4, .h4 {
 .bg-base {
   --tw-bg-opacity: 1;
   background-color: rgb(209 228 221 / var(--tw-bg-opacity, 1));
-}
-
-.bg-gradient-to-l {
-  background-image: linear-gradient(to left, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .object-cover {
