fix: indent  paragraph element mobile widths

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
         <span class="translate-y-0.5 ml-2 flex items-center text-h4" tabindex="0">Olympia, WA, USA</span>
       </div>
     </div>
-    <div class="substep animation__delay-long -md:mb-3 mb-5 flex flex-col -md:space-y-5 space-y-7">
+    <div class="substep animation__delay-long -md:mb-3 mb-5 flex flex-col -md:space-y-5 space-y-7 -sm:text-left -sm:indent-5">
       <p tabindex="0">I'm a full-stack professional with over 6 years of experience.</p>
 
       <p tabindex="0">In that time, I've enjoyed building, maintaining, and repairing many websites, plugins, and integrations. Having used a myriad of technologies, I've become somewhat framework-agnostic and proficient in choosing a stack that best suits project needs.</p>
@@ -23,7 +23,7 @@
 
       <p tabindex="0">I've been a stalwart team member in a collaborative environment with distributed teams. I have lead-developer experience, pay attention to detail, and have a strong desire to learn. I focus on team goals, remain unpretentious, and prioritize clear communication.</p>
 
-      <span tabindex="0">Let's work together!</span>
+      <span tabindex="0" class="text-center indent-0">Let's work together!</span>
     </div>
   </header>
 
