--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1055,6 +1055,10 @@ h4, .h4 {
   text-align: center;
 }
 
+.indent-0 {
+  text-indent: 0px;
+}
+
 .font-playertwo {
   font-family: "Press Start 2P";
 }
@@ -1558,6 +1562,18 @@ body {
 
   .-sm\:hidden {
     display: none;
+  }
+
+  .-sm\:text-left {
+    text-align: left;
+  }
+
+  .-sm\:indent-10 {
+    text-indent: 2.5rem;
+  }
+
+  .-sm\:indent-5 {
+    text-indent: 1.25rem;
   }
 }
 
