chore: revise paragraph copy

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,13 +13,13 @@
       </div>
     </div>
     <div class="substep animation__delay-long -md:mb-3 mb-5 flex flex-col -md:space-y-5 space-y-7 -sm:text-left -sm:indent-5">
-      <p tabindex="0">I'm a full-stack professional with over 6 years of experience.</p>
+      <p tabindex="0">I'm a full-stack developer with over 6 years of professional experience.</p>
 
       <p tabindex="0">In that time, I've enjoyed building, maintaining, and repairing many websites, plugins, and integrations. Having used a myriad of technologies, I've become somewhat framework-agnostic and proficient in choosing a stack that best suits project needs.</p>
 
       <p tabindex="0">On the front-end, I emphasize accessibility, design-to-code accuracy, re-usable atomic structure, SEO, and performance optimization best practices.</p>
 
-      <p tabindex="0">Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, CD/CI pipelines, then made the switch to headless CMS with PostGres, Node.js and SSG. Inevitably, I graduated to a modern Typescript, server vs. client ecosystem that utilizes stateful TSX and graphQL fetching. Always tooling, I've been expanding my knowledge to the Django + Python back-end arena.</p>
+      <p tabindex="0">Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, CD/CI pipelines, then made the jump to headless CMS with PostGres, Node.js and SSG. Inevitably, I traversed the modern Typescript, server vs. client ecosystem that utilizes stateful TSX and graphQL fetching. I'm grateful for all my pre-LLM coding and troubleshooting knowledge, but life today is much sweeter with my AI assistant Copilot.</p>
 
       <p tabindex="0">I've been a stalwart team member in a collaborative environment with distributed teams. I have lead-developer experience, pay attention to detail, and have a strong desire to learn. I focus on team goals, remain unpretentious, and prioritize clear communication.</p>
 
