--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
   <header class="step max-auto flex flex-col justify-center items-center text-center">
     <h1 class="warm-glow mb-7" tabindex="0">Contact</h1>
     <button id="copyEmailButton" class="flex relative bg-base hover:bg-pank transition-all duration-500 pixel-corners pt-2 pb-1.5 px-6 w-fit mx-auto font-playertwo text-black mb-7">
-      <span class="">Copy Email</span>
+      <span class="">Copy My Email</span>
       <svg class="ml-3" fill="#000000" width="25px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
         <title aria-hidden="true">Icon '16pxls' (c) by Paul mackenzie paul@whatspauldoing.com. Creative Commons Attribution-ShareAlike 4.0 International License. http://creativecommons.org/licenses/by-sa/4.0/</title>
         <path d="M14 12V2H4V0h12v12h-2zM0 4h12v12H0V4zm2 2v8h8V6H2z" fill-rule="evenodd" />
