--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,7 +19,7 @@
 
       <p tabindex="0">On the front-end, I emphasize accessibility, design-to-code accuracy, re-usable atomic structure, SEO, and performance optimization best practices.</p>
 
-      <p tabindex="0">Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, CD/CI pipelines, then made the jump to headless CMS with PostGres, Node.js and SSG. Inevitably, I traversed the modern Typescript, server vs. client ecosystem that utilizes stateful TSX and graphQL fetching. I'm grateful for all my pre-LLM coding and troubleshooting knowledge, but life today is much sweeter with my AI assistant Copilot.</p>
+      <p tabindex="0">Like many, I started with the out-of-box monolith, Wordpress. Gradually, I introduced containerization, CD/CI pipelines, then made the jump to headless CMS with PostGres, Node.js and SSG. Inevitably, I traversed the modern Typescript, server vs. client ecosystem that utilizes stateful TSX and graphQL fetching. I'm grateful for all my pre-LLM coding and troubleshooting knowledge, but life today is sweeter with my AI assistant Copilot.</p>
 
       <p tabindex="0">I've been a stalwart team member in a collaborative environment with distributed teams. I have lead-developer experience, pay attention to detail, and have a strong desire to learn. I focus on team goals, remain unpretentious, and prioritize clear communication.</p>
 
