chore: hide PDF from google via robots.txt and rel='nofollow' on the download resume button

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -60,5 +60,5 @@
       </svg>
     </a>
   </div>
-  <a href="/assets/pdf/Curtis_Wirtz_Resume_2025.pdf" target="_blank" class="text-center bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black mx-auto -md:mb-16 mb-20">View Resume</a>
+  <a href="/assets/pdf/Curtis_Wirtz_Resume_2025.pdf" target="_blank" rel="nofollow" class="text-center bg-base hover:bg-pank transition-all duration-500 pixel-corners mt-3 pt-2 pb-1.5 px-6 w-fit font-playertwo text-black mx-auto -md:mb-16 mb-20">View Resume</a>
 </section>
